src/components/InternalFooter/internalFooter.module.css
.footerContainer {
	padding: 18px;
	background: #fff;
	display: none;
}

.footer {
	padding: 0;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.icon {
	stroke: #7d7d92;
	color: transparent;
}

.isActive .icon {
	color: #4343de;
	fill: #4343de;
}

@media only screen and (max-width: 500px) {
	.footer {
		width: 100vw;
		padding: 10px;
		display: flex;
		position: fixed;
		bottom: 0;
		left: 0;
		background: #fff;
		height: 80px;
	}
}

